refactor: introduce DTO layer and mappers for API responses